force-app/main/default/objects/Cotizacion__c/fields/Aporta_por_hijos__c.field-meta.xml
<CustomField>
    <fullName>Aporta_por_hijos__c</fullName>
    <label>Aporta por hijos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>