force-app/main/default/objects/Cotizacion__c/fields/Aporte_estimado__c.field-meta.xml
<CustomField>
    <fullName>Aporte_estimado__c</fullName>
    <label>Aporte estimado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>