force-app/main/default/objects/Cotizacion__c/fields/Bonif_especial_6_meses__c.field-meta.xml
<CustomField>
    <fullName>Bonif_especial_6_meses__c</fullName>
    <label>Bonif. especial 6 meses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>