force-app/main/default/objects/Cotizacion__c/fields/Bonif_Especial_por_Grupo_de_Afinidad__c.field-meta.xml
<CustomField>
    <fullName>Bonif_Especial_por_Grupo_de_Afinidad__c</fullName>
    <label>Bonif. Especial por Grupo de Afinidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>