force-app/main/default/objects/Cotizacion__c/fields/Bonif_Grupo_potencialidad__c.field-meta.xml
<CustomField>
    <fullName>Bonif_Grupo_potencialidad__c</fullName>
    <label>Bonif. Grupo potencialidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>