force-app/main/default/objects/Cotizacion__c/fields/Bonificacion_por_region__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_por_region__c</fullName>
    <label>Bonificación por región</label>
    <length>255</length>
    <type>Text</type>
</CustomField>