force-app/main/default/objects/Cotizacion__c/fields/C_digo_Postal_new__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Postal_new__c</fullName>
    <formula>Localidad_new__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Postal</label>
    <type>Text</type>
</CustomField>