force-app/main/default/objects/Cotizacion__c/fields/Capital_social_cooperativo__c.field-meta.xml
<CustomField>
    <fullName>Capital_social_cooperativo__c</fullName>
    <label>Capital social cooperativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>