force-app/main/default/objects/Cotizacion__c/fields/Cotizacion_de_prueba__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_de_prueba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotización de prueba</label>
    <type>Checkbox</type>
</CustomField>