force-app/main/default/objects/Cotizacion__c/fields/Cotizacion_seleccionada__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_seleccionada__c</fullName>
    <formula>Oportunidad__r.Cotizacion_elegida__r.Name = Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cotización seleccionada</label>
    <type>Checkbox</type>
</CustomField>