force-app/main/default/objects/Cotizacion__c/fields/Deduccin_de_aportes_Monotributo__c.field-meta.xml
<CustomField>
    <fullName>Deduccin_de_aportes_Monotributo__c</fullName>
    <label>Deducción de aportes Monotributo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>