force-app/main/default/objects/Cotizacion__c/fields/Deduccion_de_aportes__c.field-meta.xml
<CustomField>
    <fullName>Deduccion_de_aportes__c</fullName>
    <label>Deducción de aportes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>