force-app/main/default/objects/Cotizacion__c/fields/Descuento_pago_debito_cbu__c.field-meta.xml
<CustomField>
    <fullName>Descuento_pago_debito_cbu__c</fullName>
    <label>Descuento por pago débito CBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>