force-app/main/default/objects/Cotizacion__c/fields/Diferencia_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_a_pagar__c</fullName>
    <label>Diferencia a pagar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>