force-app/main/default/objects/Cotizacion__c/fields/Dto_pago_con_tarjeta_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Dto_pago_con_tarjeta_de_credito__c</fullName>
    <label>Dto. pago con tarjeta de crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>