force-app/main/default/objects/Cotizacion__c/fields/Edad_conyuge__c.field-meta.xml
<CustomField>
    <fullName>Edad_conyuge__c</fullName>
    <label>Edad cónyuge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>