force-app/main/default/objects/Cotizacion__c/fields/Estado_de_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cotizacion__c</fullName>
    <label>Estado de Cotización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seleccionada</fullName>
            </value>
            <value>
                <fullName>No Seleccionada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>