force-app/main/default/objects/Cotizacion__c/fields/Grupo_de_Afinidad__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Afinidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Afinidad</label>
    <referenceTo>Grupo_de_Afinidad__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>