force-app/main/default/objects/Cotizacion__c/fields/Grupo_de_potencialidad__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_potencialidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grupo de potencialidad</label>
    <type>Checkbox</type>
</CustomField>