force-app/main/default/objects/Cotizacion__c/fields/Hijos_entre_21_y_25_aos__c.field-meta.xml
<CustomField>
    <fullName>Hijos_entre_21_y_25_aos__c</fullName>
    <label>Hijos entre 21 y 25 años</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>