force-app/main/default/objects/Cotizacion__c/fields/Hijos_hasta_20_aos__c.field-meta.xml
<CustomField>
    <fullName>Hijos_hasta_20_aos__c</fullName>
    <label>Hijos hasta 20 años</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>