force-app/main/default/objects/Cotizacion__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <label>Localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>