force-app/main/default/objects/Cotizacion__c/fields/Localidad_Coti__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Coti__c</fullName>
    <label>Localidad Cotización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>