force-app/main/default/objects/Cotizacion__c/fields/LocId__c.field-meta.xml
<CustomField>
    <fullName>LocId__c</fullName>
    <label>LocId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>