force-app/main/default/objects/Cotizacion__c/fields/Monotributista_conyuge__c.field-meta.xml
<CustomField>
    <fullName>Monotributista_conyuge__c</fullName>
    <label>Monotributista cónyuge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>