force-app/main/default/objects/Cotizacion__c/fields/Nombre_de_Localidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Localidad__c</fullName>
    <formula>Localidad_new__r.Nombre_de_Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Localidad</label>
    <type>Text</type>
</CustomField>