force-app/main/default/objects/Cotizacion__c/fields/Nombre_y_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Nombre_y_Apellido__c</fullName>
    <label>Nombre y Apellido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>