force-app/main/default/objects/Cotizacion__c/fields/Nro_Cotizacion_Corporativa__c.field-meta.xml
<CustomField>
    <fullName>Nro_Cotizacion_Corporativa__c</fullName>
    <externalId>true</externalId>
    <label>Nro. Cotización Corporativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>