force-app/main/default/objects/Cotizacion__c/fields/Nro_cotizacion_individual__c.field-meta.xml
<CustomField>
    <fullName>Nro_cotizacion_individual__c</fullName>
    <externalId>true</externalId>
    <label>Nro. Cotización Individual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>