force-app/main/default/objects/Cotizacion__c/fields/Nro_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Documento__c</fullName>
    <label>Nro. de Documento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>