force-app/main/default/objects/Cotizacion__c/fields/Pago_con_debito__c.field-meta.xml
<CustomField>
    <fullName>Pago_con_debito__c</fullName>
    <label>Pago con débito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Débito/CBU</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tarjeta de Crédito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>