force-app/main/default/objects/Cotizacion__c/fields/Plan_a_cotizar__c.field-meta.xml
<CustomField>
    <fullName>Plan_a_cotizar__c</fullName>
    <label>Plán a cotizar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS100</fullName>
            </value>
            <value>
                <fullName>AS200</fullName>
            </value>
            <value>
                <fullName>AS204</fullName>
            </value>
            <value>
                <fullName>AS300</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>AS500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>