force-app/main/default/objects/Cotizacion__c/fields/Precio_3er_hijo_menor_21_aos__c.field-meta.xml
<CustomField>
    <fullName>Precio_3er_hijo_menor_21_aos__c</fullName>
    <label>Precio 3er hijo menor 21 años</label>
    <length>255</length>
    <type>Text</type>
</CustomField>