force-app/main/default/objects/Cotizacion__c/fields/Precio_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>Precio_Conyuge__c</fullName>
    <label>Precio Cónyuge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>