force-app/main/default/objects/Cotizacion__c/fields/Precio_hijo_entre_21_y_25_aos__c.field-meta.xml
<CustomField>
    <fullName>Precio_hijo_entre_21_y_25_aos__c</fullName>
    <label>Precio hijo entre 21 y 25 años</label>
    <length>255</length>
    <type>Text</type>
</CustomField>