force-app/main/default/objects/Cotizacion__c/fields/Precio_Titular__c.field-meta.xml
<CustomField>
    <fullName>Precio_Titular__c</fullName>
    <label>Precio Titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>