force-app/main/default/objects/Cotizacion__c/fields/Precio_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_total__c</fullName>
    <label>Precio total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>