force-app/main/default/objects/Cotizacion__c/fields/Sueldo_bruto__c.field-meta.xml
<CustomField>
    <fullName>Sueldo_bruto__c</fullName>
    <label>Sueldo bruto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>