force-app/main/default/objects/Cotizacion__c/fields/Tipo_de_afiliado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_afiliado__c</fullName>
    <label>Tipo de afiliado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voluntario</fullName>
            </value>
            <value>
                <fullName>Relacion de Dependencia</fullName>
                <label>Relación de dependencia</label>
            </value>
            <value>
                <fullName>Monotributista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>