force-app/main/default/objects/Cotizacion__c/fields/Tipo_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contacto__c</fullName>
    <label>Tipo de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Individuo</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Grupo familiar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>