force-app/main/default/objects/Cotizacion__c/fields/Total_de_capitas_cotizadas__c.field-meta.xml
<CustomField>
    <fullName>Total_de_capitas_cotizadas__c</fullName>
    <label>Total de cápitas cotizadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>