force-app/main/default/objects/Cotizacion__c/recordTypes/Cotizacion_Corporativos.recordType-meta.xml
<RecordType>
    <fullName>Cotizacion_Corporativos</fullName>
    <active>true</active>
    <description>Tipo de registro exclusivo para ventas corporativas</description>
    <label>Cotización Corporativos</label>
</RecordType>