force-app/main/default/objects/Cotizacion__c/recordTypes/Cotizacion_Individual.recordType-meta.xml
<RecordType>
    <fullName>Cotizacion_Individual</fullName>
    <active>true</active>
    <description>Tipo de registro para cotizaciones de ventas individuales</description>
    <label>Cotización Individual</label>
</RecordType>