force-app/main/default/objects/Cotizacion__c/validationRules/Coincidir_Con_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Coincidir_Con_Opp</fullName>
    <active>false</active>
    <description>Debe coincidir tipo de afiliado de la cotización y el tipo de asociado de la oportunidad</description>
    <errorConditionFormula>TEXT(Tipo_de_afiliado__c) &lt;&gt;  TEXT(Oportunidad__r.Tipo_de_Asociado__c)</errorConditionFormula>
    <errorDisplayField>Tipo_de_afiliado__c</errorDisplayField>
    <errorMessage>Debe coincidir tipo de afiliado de la cotización y el tipo de asociado de la oportunidad</errorMessage>
</ValidationRule>