force-app/main/default/objects/Cotizacion__c/validationRules/IND_Edad_conyuge.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Edad_conyuge</fullName>
    <active>true</active>
    <description>Debe indicar la edad del cónyuge</description>
    <errorConditionFormula>AND(
     RecordType.Name = &quot;Cotización Individual&quot;,
    OR(
       ISPICKVAL( Estado_Civil__c, &quot;Casado&quot;),
       ISPICKVAL( Estado_Civil__c, &quot;Concubinato&quot;)
      ),
    ISBLANK(Edad_conyuge__c ),
    ISPICKVAL ( Tipo_de_contacto__c , &quot;Grupo Familiar&quot;)
)</errorConditionFormula>
    <errorMessage>Debe indicar la edad del cónyuge</errorMessage>
</ValidationRule>