force-app/main/default/objects/Cotizacion__c/validationRules/IND_Grupo_de_potencialidad.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Grupo_de_potencialidad</fullName>
    <active>true</active>
    <description>ección Principal - Si selecciona Relación de dependencia -&gt; Grupo de Potencialidad - Check</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Cotización Individual&quot;,
    OR(
       ISPICKVAL( Tipo_de_afiliado__c , &quot;Monotributista&quot;), 
       ISPICKVAL( Tipo_de_afiliado__c , &quot;Voluntario&quot;)
       ),
    Grupo_de_potencialidad__c = True
)</errorConditionFormula>
    <errorDisplayField>Grupo_de_potencialidad__c</errorDisplayField>
    <errorMessage>No se permite grupo de potencialidad para el tipo de afiliado seleccionado, solo lo permite con el valor relación de dependencia</errorMessage>
</ValidationRule>