force-app/main/default/objects/Cotizacion__c/validationRules/IND_Grupo_Familiar_Hijos.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Grupo_Familiar_Hijos</fullName>
    <active>true</active>
    <description>Si selecciona Grupo familiar -&gt; Hijos hasta 20 años - Número o 
Si selecciona Grupo familiar -&gt; Hijos entre 21 y 25 años - Número</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Cotización Individual&quot;,
    ISPICKVAL(Tipo_de_contacto__c, &quot;2&quot;),
       AND(
        ISBLANK(Hijos_entre_21_y_25_aos__c),
        ISBLANK( Hijos_hasta_20_aos__c ),
        ISBLANK ( Edad_conyuge__c )
       )

)</errorConditionFormula>
    <errorMessage>Si indica que el tipo de contacto es Grupo Familiar, debe indicar cantidad de hijos entre 21 y 25 años o cantidad de hijos hasta 20 años o Edad del conyuge</errorMessage>
</ValidationRule>