force-app/main/default/objects/Cotizacion__c/validationRules/IND_Sueldo_bruto.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Sueldo_bruto</fullName>
    <active>true</active>
    <description>Debe indicar el sueldo bruto cuando se encuentra bajo relación de dependencia y es soltero, divorciado, viudo, casado o concubinato.</description>
    <errorConditionFormula>AND(
     RecordType.Name = &quot;Cotización Individual&quot;,
     ISPICKVAL(  Tipo_de_afiliado__c , &quot;Relacion de dependencia&quot;),
    OR(
       ISPICKVAL( Estado_Civil__c, &quot;S&quot;),
       ISPICKVAL( Estado_Civil__c, &quot;D&quot;),
       ISPICKVAL( Estado_Civil__c, &quot;V&quot;),
       ISPICKVAL( Estado_Civil__c, &quot;C&quot;),
       ISPICKVAL( Estado_Civil__c, &quot;N&quot;)
      ),
    ISBLANK( Sueldo_bruto__c )
)</errorConditionFormula>
    <errorDisplayField>Sueldo_bruto__c</errorDisplayField>
    <errorMessage>Debe indicar el Sueldo Bruto</errorMessage>
</ValidationRule>